# targetctl

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  msgreader.h  notifier.h  servicetree.cpp  servicetree.h  systemctl.cpp  systemctl.h  ui.cpp  ui.h
